project(cpp_tests)
add_subdirectory(lib/googletest)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
include_directories(../)
set(TEST_SOURCE_FILES simple_algorithm.cpp)
add_executable(cpp_tests ${TEST_SOURCE_FILES})
target_link_libraries(cpp_tests gtest gtest_main)
target_link_libraries(cpp_tests cpp)
