project(LihaiCppTests)
add_subdirectory(lib/googletest)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
include_directories(../)
set(TEST_SOURCE_FILES simple_algorithm.cpp)
add_executable(LihaiCppTests ${TEST_SOURCE_FILES})
target_link_libraries(LihaiCppTests gtest gtest_main)
target_link_libraries(LihaiCppTests LihaiCpp)
